Blackpurl/src/objects/Cash_Reconciliation_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <description>Actual amount capture</description>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Drawer_Reconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Drawer Reconciliation</label>
        <referenceTo>Cash_Drawer_Reconciliation__c</referenceTo>
        <relationshipLabel>Cash Reconciliation Payments</relationshipLabel>
        <relationshipName>Cash_Reconciliation_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Reconciliation__c</fullName>
        <label>Cash Reconciliation</label>
        <referenceTo>Cash_Reconciliation__c</referenceTo>
        <relationshipName>Cash_Reconciliation_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Payment Methods need to be update with co invoice payments</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cash Rounding</fullName>
                </value>
                <value>
                    <fullName>Charge Account</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Use Deposit</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed_Amount__c</fullName>
        <label>Processed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Actual_Amount__c  -  Processed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cash Reconciliation Payment</label>
    <nameField>
        <displayFormat>CRP-{00000}</displayFormat>
        <label>Cash Reconciliation Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Reconciliation Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>